# static_todo

./: CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
example/: CMakeLists.txt  example.cpp
include/static_todo/: static_todo.hpp
test/: CMakeLists.txt  test.cpp
